--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     let directoryData = [];
 
-    fetch('data.json')
+    fetch('data.js')
       .then(response => response.json())
       .then(data => {
         directoryData = data;
