--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h2>KR Mobile Directory</h2>
   <input type="text" id="search" placeholder="Search by name or designation..." oninput="searchDirectory()" />
-  
+  <div id="directory"></div>
 
   <script src="data.js"></script>
 <script>
