--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
 
     function render(data) {
       const container = document.getElementById("directory");
-      container.innerHTML = "";
+      container.innerHTML += 
+  '<div class="card">' +
+    '<h3>' + person.name + '</h3>' +
+    '<div class="contact">Designation: ' + person.designation + '</div>' +
+    '<div class="contact">Phone: ' + person.phone + '</div>' +
+    '<div class="actions">' +
+      '<a href="tel:' + person.phone + '">Call</a>' +
+    '</div>' +
+  '</div>';
 
-      if (data.length === 0) {
-        container.innerHTML = "<p>No matching records found.</p>";
-        return;
       }
 
       data.forEach(person => {
