--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="actions">
               <a href="tel:\${person.phone}">Call</a>
             </div>
-          </div>\`;
+          </div>`;
       });
     }
 
