--- a/index.html
+++ b/index.html
@@ -1,69 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KR Mobile Directory</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 700px; margin: auto; }
-    input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px; }
-    .card { border: 1px solid #ddd; border-radius: 6px; padding: 10px; margin-bottom: 10px; }
-    .card h3 { margin: 0; }
-    .contact { font-size: 14px; margin: 5px 0; }
-    .actions a { margin-right: 10px; text-decoration: none; color: #007BFF; }
-  </style>
+  <title>Directory</title>
 </head>
 <body>
-  <h2>KR Mobile Directory</h2>
-  <input type="text" id="search" placeholder="Search by name or designation..." oninput="searchDirectory()" />
+  <input type="text" oninput="searchDirectory()" id="search" placeholder="Search..." />
   <div id="directory"></div>
 
   <script src="data.js"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      if (typeof directoryData !== "undefined") {
-        render(directoryData);
-      } else {
-        document.getElementById("directory").innerHTML = "<p>Error loading data.</p>";
-      }
-    });
-
     function render(data) {
       const container = document.getElementById("directory");
-      container.innerHTML += 
-  '<div class="card">' +
-    '<h3>' + person.name + '</h3>' +
-    '<div class="contact">Designation: ' + person.designation + '</div>' +
-    '<div class="contact">Phone: ' + person.phone + '</div>' +
-    '<div class="actions">' +
-      '<a href="tel:' + person.phone + '">Call</a>' +
-    '</div>' +
-  '</div>';
-
-      }
-
-      data.forEach(person => {
-        container.innerHTML += \`
-          <div class="card">
-            <h3>\${person.name}</h3>
-            <div class="contact">Designation: \${person.designation}</div>
-            <div class="contact">Phone: \${person.phone}</div>
-            <div class="actions">
-              <a href="tel:\${person.phone}">Call</a>
-            </div>
-          </div>`;
-      });
+      container.innerHTML = data.map(p => `
+        <div>
+          <h3>${p.name}</h3>
+          <p>${p.designation}</p>
+          <p>${p.phone}</p>
+        </div>
+      `).join('');
     }
 
     function searchDirectory() {
       const query = document.getElementById("search").value.toLowerCase();
       const filtered = directoryData.filter(p =>
         Object.values(p).some(val =>
-          val && String(val).toLowerCase().includes(query)
+          String(val).toLowerCase().includes(query)
         )
       );
       render(filtered);
     }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      render(directoryData);
+    });
   </script>
 </body>
 </html>
