--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Directory</title>
+  <title>Mobile Directory</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,23 +11,37 @@
       max-width: 800px;
       margin: auto;
       background-color: #f4f4f9;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    /* Logo styling */
+    .logo {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    .logo img {
+      max-width: 100px;
+      height: auto;
     }
 
     h1 {
       text-align: center;
       color: #333;
+      margin-top: 5px;
     }
 
-    /* Center the search bar */
     .search-container {
       display: flex;
-      justify-content: center; /* Center horizontally */
-      margin-bottom: 20px;
+      justify-content: center;
+      margin: 20px 0;
     }
 
     input {
       width: 100%;
-      max-width: 500px; /* Maximum width on large screens */
+      max-width: 500px;
       padding: 15px;
       border-radius: 25px;
       font-size: 18px;
@@ -38,7 +52,6 @@
       transition: all 0.3s ease;
     }
 
-    /* Add a colorful effect to the search bar */
     input:focus {
       border-color: #007bff;
       outline: none;
@@ -49,7 +62,6 @@
       color: #888;
     }
 
-    /* Directory layout */
     #directory {
       display: flex;
       flex-wrap: wrap;
@@ -103,52 +115,69 @@
       color: #fff;
     }
 
-    /* Mobile-friendly styling */
+    /* Footer */
+    footer {
+      margin-top: auto;
+      text-align: center;
+      padding: 15px;
+      color: #777;
+      font-size: 14px;
+    }
+
+    /* Mobile responsiveness */
     @media (max-width: 600px) {
-      .search-container {
-        width: 100%; /* Full width on mobile */
-        margin-bottom: 15px;
+      #directory {
+        flex-direction: column;
+        align-items: center; /* Center on mobile */
       }
 
       input {
-        font-size: 14px; /* Adjust input font size */
-      }
-
-      #directory {
-        display: block; /* Stack the directory items */
+        font-size: 16px;
       }
     }
   </style>
 </head>
 <body>
+  <!-- Logo section -->
+  <div class="logo">
+    <img src="logo.png" alt="Logo" />
+  </div>
+
   <h1>Mobile Directory</h1>
-  <!-- Search Bar Container -->
+
+  <!-- Search input -->
   <div class="search-container">
     <input type="text" oninput="searchDirectory()" id="search" placeholder="Search by name or designation..." />
   </div>
 
-  <!-- Directory Content -->
+  <!-- Search results -->
   <div id="directory"></div>
+
+  <!-- Footer -->
+  <footer>
+    Created by Sajeesh P
+  </footer>
 
   <script src="data.js"></script>
   <script>
-    // Initial render with no contacts
     document.addEventListener("DOMContentLoaded", () => {
       render([]);
     });
 
     function render(data) {
       const container = document.getElementById("directory");
-      container.innerHTML = data.length === 0 ? "<p>No contacts found. Try searching!</p>" : data.map(p => `
-        <div class="card">
-          <h3>${p.name}</h3>
-          <p>${p.designation}</p>
-          <p>${p.phone}</p>
-          <div class="actions">
-            <a href="tel:${p.phone}">Call</a>
+      container.innerHTML = data.length === 0
+        ? "<p style='text-align:center;'>No contacts found. Try searching!</p>"
+        : data.map(p => `
+          <div class="card">
+            <h3>${p.name}</h3>
+            <p>${p.designation}</p>
+            <p>${p.phone}</p>
+            <div class="actions">
+              <a href="tel:${p.phone}">Call</a>
+            </div>
           </div>
-        </div>
-      `).join('');
+        `).join('');
     }
 
     function searchDirectory() {
@@ -158,7 +187,7 @@
           String(val).toLowerCase().includes(query)
         )
       );
-      render(filtered); // Display only the matching results
+      render(filtered);
     }
   </script>
 </body>
