--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <img src="logo.png" alt="Logo" />
   </div>
 
-  <h1>Mobile Directory</h1>
+  <h1>Mobile Directory (CUG)</h1>
 
   <!-- Search input -->
   <div class="search-container">
