--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mobile Directory (CUG)</title>
-  <style>
+  <link rel="icon" type="image/png" href="favicon.png">
+<style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
