--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <!-- Search input -->
   <div class="search-container">
-    <input type="text" oninput="searchDirectory()" id="search" placeholder="Search by name or designation..." />
+    <input type="text" id="search" placeholder="Search by name or designation..." oninput="searchDirectory()" autocomplete="off" autocorrect="off" spellcheck="false" style="position: relative; z-index: 1;" />
   </div>
 
   <!-- Search results -->
