--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     .card h3 {
       font-size: 18px;
       color: #333;
-      margin: 10px 0;
+      margin: 10px 0 5px;
     }
 
     .card p {
@@ -156,7 +156,9 @@
   <script src="data.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // Nothing to render initially
+      if (window.directoryData && directoryData.length > 0) {
+        render(directoryData);
+      }
     });
 
     function render(data) {
@@ -169,7 +171,7 @@
             <p>${p.designation}</p>
             <p>${p.phone}</p>
             <div class="actions">
-              ${!p.isHod ? `<a href="tel:${p.phone}">Call</a>` : ""}
+              ${p.isHod === true ? "" : `<a href="tel:${p.phone}">Call</a>`}
             </div>
           </div>
         `).join('');
@@ -179,7 +181,7 @@
       const query = document.getElementById("search").value.toLowerCase();
 
       if (!window.directoryData || query === "") {
-        document.getElementById("directory").innerHTML = "";
+        render(directoryData);
         return;
       }
 
