--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ h1 {
 
   <div class="search-container">
     <input type="text" oninput="searchDirectory()" id="search" placeholder="Search by name or designation..." />
+  style="text-align: center;
   </div>
 
   <div id="directory"></div>
