--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ h1 {
 </h1>
 
   <div class="search-container">
-    <input type="text" oninput="searchDirectory()" id="search" placeholder="Search by name or designation..." />
-  style="text-align: center;
+    <input type="text" oninput="searchDirectory()" id="search" placeholder="Search by name or designation..." style="text-align: center;" />
+  
   </div>
 
   <div id="directory"></div>
