--- a/index.html
+++ b/index.html
@@ -202,14 +202,7 @@ h1 {
         <h3>${p.name}</h3>
         <p>${designation}</p>
         <p class="phone">${p.phone}</p>
-        ${showCall ? `
-  <div class="actions">
-    <a href="tel:${p.phone}">Call</a>
-    <a href="#" onclick="shareContact('${p.name}', '${p.designation}', '${p.phone}'); return false;">Share</a>
-  </div>
-` : ""}
-
-    `;
+        ${showCall ? `<div class="actions"><a href="tel:${p.phone}">Call</a></div>` : ""}
   }).join('');
 }
     function shareContact(name, designation, phone) {
